# extui

./: .gitignore  Cargo.toml  README.md  devsm.toml
crates/benchmark/: Cargo.toml
crates/benchmark/results/: baseline.json  inline-text.json  text-u64.json
crates/benchmark/src/: bindings.rs  common.rs  editor.rs  main.rs  profile.rs  ratatui_render.rs  render.rs  scene.rs
crates/extui-bindings/: Cargo.toml
crates/extui-bindings/src/: key.rs  lib.rs  parse.rs  router.rs
crates/extui-bindings/src/router/: tests.rs
crates/extui-bindings/tests/: config_merge.rs  vim_normal_mode.rs
crates/extui-editor/: Cargo.toml  README.md
crates/extui-editor/examples/: custom_bindings.rs  highlight.rs  search.rs  spelling.rs  themes.rs
crates/extui-editor/examples/common/: themes.rs
crates/extui-editor/src/: bindings.rs  buffer.rs  cursor.rs  editor.rs  history.rs  lib.rs  mode.rs  render.rs  theme.rs  visual.rs
crates/extui-editor/tests/: edits.rs  highlighting.rs  motions.rs  replacements.rs  sanity.rs  tabs.rs  undo.rs  visual.rs
crates/extui-editor/tests/common/: mod.rs
crates/extui-neovim/: Cargo.toml  Untitled
crates/extui-neovim/examples/: compare.rs  diag.rs  embed.rs
crates/extui-neovim/src/: grid.rs  input.rs  lib.rs  msgpack.rs  reader.rs
crates/extui-neovim/tools/: compare_embed.py
crates/tinyhl/: .gitignore  Cargo.toml  rust.ungrammar
crates/tinyhl/examples/: rust_semantic_bench.rs  tomorrow_dark_html.rs
crates/tinyhl/fixtures/c/: edge.c.in  kr.c.in  simple.c.in
crates/tinyhl/fixtures/cmake/: simple.cmake.in
crates/tinyhl/fixtures/conf/: simple.conf.in
crates/tinyhl/fixtures/cpp/: simple.cpp.in
crates/tinyhl/fixtures/csharp/: simple.cs.in
crates/tinyhl/fixtures/css/: simple.css.in
crates/tinyhl/fixtures/csv/: simple.csv.in
crates/tinyhl/fixtures/go/: simple.go.in
crates/tinyhl/fixtures/html/: simple.html.in
crates/tinyhl/fixtures/ini/: simple.ini.in
crates/tinyhl/fixtures/java/: simple.java.in
crates/tinyhl/fixtures/json/: nested.json.in  simple.json.in
crates/tinyhl/fixtures/lisp/: simple.lisp.in
crates/tinyhl/fixtures/lua/: simple.lua.in
crates/tinyhl/fixtures/make/: simple.mk.in
crates/tinyhl/fixtures/markdown/: simple.md.in
crates/tinyhl/fixtures/perl/: simple.pl.in
crates/tinyhl/fixtures/protobuf/: simple.proto.in
crates/tinyhl/fixtures/python/: simple.py.in
crates/tinyhl/fixtures/rust/: edge.rs.in  simple.rs.in
crates/tinyhl/fixtures/sh/: simple.sh.in
crates/tinyhl/fixtures/ts/: simple.ts.in
crates/tinyhl/fuzz/: Cargo.toml
crates/tinyhl/fuzz/fuzz_targets/: rust_mutations.rs
crates/tinyhl/fuzz/src/: lib.rs
crates/tinyhl/src/: delimiter.rs  dispatch.rs  highlighter.rs  kind.rs  lib.rs  render.rs  semantic.rs  source.rs  state.rs  table.rs  token.rs
crates/tinyhl/tests/: delimiter.rs  delimiter_incremental.rs  golden.rs  highlighter.rs  incremental.rs  semantic.rs  semantic_incremental.rs
examples/: event_loop_demo.rs  event_printer.rs  inline_progress.rs  lists.rs  robust_clipboard.rs  styles.rs
src/: base64.rs  display_rect.rs  event.rs  features.rs  lib.rs  vt.rs  widget.rs
src/event/: parse.rs  polling.rs
src/sys/: attr.rs  mod.rs  size.rs
tests/: vt_encoding.rs
(+38 files in other folders)
