[package]
name = "extui"
version = "0.1.3"
edition = "2024"
authors = ["Thomas Dagenais <exrok@i64.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/exrok/extui"
description = "An experimental fast compiling serialization and deserialization libary for JSON like formats."
keywords = [""]
categories = [""]
rust-version = "1.91"

[dependencies]
itoap = "1.0.1"
unicode-segmentation = "1.12.0"
unicode-width = { version = "0.2.1", default-features = false }
libc = "0.2.175"
bitflags = "2.9.4"
signal-hook-registry = "1.4.6"

[dev-dependencies]
vt100 = "0.16"

[features]
bracketed-paste = []

[workspace]
members = [
    "crates/extui-neovim",
    "crates/tinyhl",
    "crates/benchmark",
    "crates/extui-editor",
    "crates/extui-bindings",
]
exclude = []

[profile.release]
debug = 1
